<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".ui.dashboard.DashboardFragment">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="@dimen/cardview_default_radius"
                android:scaleType="fitCenter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/reminder_name"
                android:textColor="@color/dusty_rose"

                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/when"
                android:textColor="@color/dusty_rose"
                android:layout_marginTop="20dp" />

            <TableLayout
                android:layout_width="match_parent"
                android:stretchColumns="0"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/m" />

                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/t" />

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/w" />

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/x" />

                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/f" />

                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/a" />

                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>
                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/s" />

                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="50dp" />

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/time"
                android:textColor="@color/dusty_rose"

                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectable"
                android:text="Set time"
                android:textAllCaps="false"
                android:textColor="@color/Gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/done" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>